<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextCharacterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/character_name" />

    <EditText
        android:id="@+id/editTextActorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/actor_name" />

    <Spinner
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:id="@+id/spinnerFilm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="4dp"
        android:text="@string/cancel" />

</LinearLayout>